# sgllib

./: CMakeLists.txt  README.md
addon/: camera.cpp  camera.hpp  eventloop.cpp
core/: imgui.hpp  log.cpp  log.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  window.cpp  window.hpp
examples/: CMakeLists.txt  window.cpp
include/: camera.hpp  eventloop.hpp  fileutil.hpp  imgui.hpp  log.hpp  material.hpp  mesh.hpp  shader.hpp  texture.hpp  window.hpp
